<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_take_photo"
        android:title="@string/action_take_photo"
        android:icon="@drawable/ic_add_a_photo_white_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_magnet"
        app:showAsAction="ifRoom" />

</menu>