<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/general_window_padding">

    <LinearLayout
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText"
            tools:text="Hand lifting magnet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price_text_view"
                style="@style/Details"
                tools:text="52"/>

            <TextView
                style="@style/Details"
                android:paddingLeft="@dimen/text_view_spacing"
                android:paddingStart="@dimen/text_view_spacing"
                android:paddingRight="@dimen/text_view_spacing"
                android:paddingEnd="@dimen/text_view_spacing"
                android:text="@string/currency" />

            <TextView
                style="@style/Details"
                android:paddingLeft="@dimen/text_view_spacing"
                android:paddingRight="@dimen/text_view_spacing"
                android:text="@string/currency_quantity_separator" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/Details"
                android:paddingLeft="@dimen/text_view_spacing"
                android:paddingRight="@dimen/text_view_spacing"
                tools:text="8"/>

            <TextView
                style="@style/Details"
                android:text="@string/on_stock" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sale_button"
        android:layout_width="@dimen/zero_width"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="saleProduct"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/sale" />

</LinearLayout>